hw11/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-service
  namespace: m
spec:
  selector:
    app: health-service
  ports:
    - port: 80
      targetPort: 8000
